k8s/replicaset.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-dhanashri-catering
spec:
  type: NodePort
  selector:
    app: new-dhanashri-catering
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
